yiltc/testsuite/negative/wrong_arg_count.yilt
fn foo()
    add(1)
